[tool.poetry]
name = "rest-tutu"
version = "0.1.0"
description = "A rest_framework tutorial."
authors = ["raj23689 <92665411+raj23689@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
pygments = "^2.17.2"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
